--- a/package.json
+++ b/package.json
@@ -17,16 +17,17 @@
     "cli-envy"
   ],
   "dependencies": {
-    "@commander-js/extra-typings": "^12.1.0",
     "@inquirer/prompts": "^6.0.1",
-    "commander": "^12.1.0"
+    "yargs": "^17.7.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@bluzzi/eslint-config": "^1.2.1",
+    "@types/bun": "latest",
     "@types/node": "^22.7.4",
+    "@types/yargs": "^17.0.33",
     "eslint": "8",
-    "typescript": "^5.6.2",
-    "@types/bun": "latest"
+    "typescript": "^5.6.2"
   },
   "eslintConfig": {
     "extends": "@bluzzi",
