--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   ],
   "dependencies": {
     "@inquirer/prompts": "^6.0.1",
+    "dedent": "^1.5.3",
     "yargs": "^17.7.2",
     "zod": "^3.23.8"
   },
