--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   ],
   "dependencies": {
     "@inquirer/prompts": "^6.0.1",
+    "copy-paste": "^1.5.3",
     "dedent": "^1.5.3",
     "yargs": "^17.7.2",
     "zod": "^3.23.8"
@@ -25,7 +26,7 @@
   "devDependencies": {
     "@bluzzi/eslint-config": "^1.2.1",
     "@types/bun": "latest",
-    "@types/node": "^22.7.4",
+    "@types/copy-paste": "^1.1.33",
     "@types/yargs": "^17.0.33",
     "eslint": "8",
     "typescript": "^5.6.2"
