--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,5 +37,5 @@
             gh release create "$tag" \
               --title="$tag" \
               --draft \
-              ./dist/${platform}
+              ./dist/*
 ...
