--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@
             - windows-x64
             - darwin-x64
             - darwin-arm64
+      permissions:
+        contents: write
       steps:
         - uses: actions/checkout@v3
         - name: Use Bun
