--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,43 +1,58 @@
 ---
-  name: Release Envy CLI
-  on:
-    push:
-      tags:
-        - "*"
-  jobs:
-    build:
-      runs-on: ubuntu-latest
-      strategy:
-        matrix:
-          platform: 
-            - linux-x64
-            - linux-arm64
-            - windows-x64
-            - darwin-x64
-            - darwin-arm64
-      permissions:
-        contents: write
-      steps:
-        - uses: actions/checkout@v3
-        - name: Use Bun
-          uses: oven-sh/setup-bun@v2
-          with:
-            bun-version: latest
-        - name: Install dependencies
-          run: bun install
-        - name: Build CLI
-          run: |
-            bun build --compile --minify --sourcemap ./src/bin.ts --target bun-${{ matrix.platform }} --outfile dist/${{ matrix.platform }}
-        - name: Create release
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          run: |
-            tag="${GITHUB_REF#refs/tags/}"
-            platform="${{ matrix.platform }}"
+name: Release Envy CLI
 
-            # Assuming all the files are in the ./dist directory and are named with the platform name
-            gh release create "$tag" \
-              --title="$tag" \
-              --draft \
-              ./dist/*
+on:
+  push:
+    tags:
+      - "*"
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        platform: 
+          - linux-x64
+          - linux-arm64
+          - windows-x64
+          - darwin-x64
+          - darwin-arm64
+    steps:
+      - uses: actions/checkout@v3
+      - name: Use Bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
+      - name: Install dependencies
+        run: bun install
+      - name: Build CLI
+        run: |
+          bun build --compile --minify --sourcemap ./src/bin.ts --target bun-${{ matrix.platform }} --outfile dist/${{ matrix.platform }}
+      # Upload the built CLI as an artifact for the release job to use later
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: cli-${{ matrix.platform }}
+          path: ./dist/${{ matrix.platform }}
+
+  release:
+    runs-on: ubuntu-latest
+    needs: build  # Wait for all builds to finish
+    steps:
+      - name: Download all build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          path: ./dist
+      - name: Create release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          tag="${GITHUB_REF#refs/tags/}"
+
+          # Create a single release for all platforms
+          gh release create "$tag" \
+            --title="$tag" \
+            --draft \
+            ./dist/*
+
 ...
