--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build  # Wait for all builds to finish
     steps:
+      # Checkout the repository to ensure git is available
+      - uses: actions/checkout@v3
       - name: Download all build artifacts
         uses: actions/download-artifact@v3
         with:
