--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Upload build artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: cli-${{ matrix.platform }}
+          name: ${{ matrix.platform }}
           path: ./dist/${{ matrix.platform }}
 
   release:
@@ -55,6 +55,6 @@ jobs:
           gh release create "$tag" \
             --title="$tag" \
             --draft \
-            ./dist/*
+            ./dist/**
 
 ...
