--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,33 +27,15 @@ jobs:
         run: bun install
       - name: Build CLI
         run: |
-          bun build --compile --minify --sourcemap ./src/bin.ts --target bun-${{ matrix.platform }} --outfile ./dist/${{ matrix.platform }}/envy
-      # Upload the built CLI as an artifact for the release job to use later
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: ${{ matrix.platform }}
-          path: ./dist/${{ matrix.platform }}/envy
-
-  release:
-    runs-on: ubuntu-latest
-    needs: build  # Wait for all builds to finish
-    steps:
-      # Checkout the repository to ensure git is available
-      - uses: actions/checkout@v3
-      - name: Download all build artifacts
-        uses: actions/download-artifact@v3
-        with:
-          path: ./dist
-      - name: Create release
+          bun build --compile --minify --sourcemap ./src/bin.ts --target bun-${{ matrix.platform }} --outfile ./dist/${{ matrix.platform }}
+      - name: Add to release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           tag="${GITHUB_REF#refs/tags/}"
 
-          # Create a single release for all platforms
           gh release create "$tag" \
             --title="$tag" \
             --draft \
-            ./dist/**/envy
+            ./dist/${{ matrix.platform }}
 ...
