--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,7 @@ jobs:
         with:
           name: cli-builds
           path: ./dist/${{ matrix.platform }}
+          overwrite: true
 
   release:
     runs-on: ubuntu-latest
