--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,62 +1,57 @@
 ---
-name: Release Envy CLI
+  name: Release Envy CLI
 
-on:
-  push:
-    tags:
-      - "*"
+  on:
+    push:
+      tags:
+        - "*"
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        platform: 
-          - linux-x64
-          - linux-arm64
-          - windows-x64
-          - darwin-x64
-          - darwin-arm64
-    steps:
-      - uses: actions/checkout@v3
-      - name: Use Bun
-        uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: latest
-      - name: Install dependencies
-        run: bun install
-      - name: Build CLI
-        run: |
-          bun build --compile --minify --sourcemap ./src/bin.ts --target bun-${{ matrix.platform }} --outfile ./dist/${{ matrix.platform }}
-      # Upload the built CLI as an artifact for the release job to use later
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: cli-builds
-          path: ./dist/${{ matrix.platform }}
-          overwrite: true
-
-  release:
-    runs-on: ubuntu-latest
-    needs: build  # Wait for all builds to finish
-    steps:
-      # Checkout the repository to ensure git is available
-      - name: Download all build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: cli-builds
-      - uses: actions/checkout@v3
-      - name: Print builds
-        run: ls ./dist -R
-      - name: Create release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          tag="${GITHUB_REF#refs/tags/}"
-
-          # Create a single release for all platforms
-          gh release create "$tag" \
-            --title="$tag" \
-            --draft \
-            ./dist/**
+  jobs:
+    release:
+      runs-on: ubuntu-latest
+      outputs:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+      steps:
+        - uses: actions/checkout@v3
+        - name: Create Release
+          id: create_release
+          uses: actions/create-release@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            tag_name: ${{ github.ref }}
+            release_name: ${{ github.ref }}
+            draft: true
+            prerelease: false
+    build:
+      needs: release
+      runs-on: ubuntu-latest
+      strategy:
+        matrix:
+          platform: 
+            - linux-x64
+            - linux-arm64
+            - windows-x64
+            - darwin-x64
+            - darwin-arm64
+      steps:
+        - uses: actions/checkout@v3
+        - name: Use Bun
+          uses: oven-sh/setup-bun@v2
+          with:
+            bun-version: latest
+        - name: Install dependencies
+          run: bun install
+        - name: Build CLI
+          run: |
+            bun build --compile --minify --sourcemap ./src/bin.ts --target bun-${{ matrix.platform }} --outfile ./dist/${{ matrix.platform }}
+        - name: Upload build artifact to release
+          uses: actions/upload-release-asset@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            upload_url: ${{ needs.release.outputs.upload_url }}
+            asset_path: ./dist/${{ matrix.platform }}
+            asset_name: envy-${{ matrix.platform }}
+            asset_content_type: application/octet-stream
 ...
