--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,7 +51,7 @@
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           with:
             upload_url: ${{ needs.release.outputs.upload_url }}
-            asset_path: ./dist/${{ matrix.platform }}
+            asset_path: ./dist/${{ matrix.platform }}*
             asset_name: envy-${{ matrix.platform }}
             asset_content_type: application/octet-stream
 ...
